# esp32-co2-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md  sdkconfig.defaults
.cargo/: config.toml
scd41-core/: Cargo.toml
scd41-core/src/: lib.rs  scd41.rs
src/: ble.rs  device.rs  display.rs  error.rs  font.rs  main.rs  sensor.rs
