[package]
name = "esp32-co2-monitor"
version = "0.1.0"
authors = ["Sergei Guselnikov <guselnikov@me.com>"]
edition = "2021"
description = "ESP32-based CO2 monitor using SCD41 sensor and SSD1306 OLED display"
repository = "https://github.com/arietis/esp32-co2-monitor"
license = "MIT"
keywords = ["esp32", "embedded", "co2", "scd41", "oled"]
categories = ["embedded", "hardware-support"]
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-co2-monitor"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-svc = { version = "0.50.0", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
log = "0.4.22"

[build-dependencies]
embuild = "0.33.0"
